[gd_scene load_steps=12 format=3 uid="uid://gbmfkcaw7kc6"]

[ext_resource type="PackedScene" uid="uid://bw4siilxufwyk" path="res://scenes/char/ship.tscn" id="1_776gt"]
[ext_resource type="Script" path="res://scenes/levels/Level1.gd" id="1_ep8oo"]
[ext_resource type="Texture2D" uid="uid://dbg24fyq3s4q6" path="res://gfx/square.png" id="3_3rh33"]
[ext_resource type="PackedScene" uid="uid://bav4oj0w0t1o5" path="res://scenes/util/LabelSpell.tscn" id="3_yop4o"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_2l01y"]
b = Vector2(1280, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_n4s1y"]
b = Vector2(0, 720)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6b3ub"]
a = Vector2(0, 720)
b = Vector2(1280, 720)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mxyi1"]
a = Vector2(1280, 0)
b = Vector2(1280, 720)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4e25h"]
emission_shape = 3
emission_box_extents = Vector3(640, 1, 1)
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 150.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_max = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ir78t"]
size = Vector2(17.875, 737)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tv1yd"]
size = Vector2(1484, 23)

[node name="Level1" type="Node2D"]
script = ExtResource("1_ep8oo")

[node name="Ship" parent="." instance=ExtResource("1_776gt")]
position = Vector2(635, 668)

[node name="WorldBoundary" type="StaticBody2D" parent="."]

[node name="Up" type="CollisionShape2D" parent="WorldBoundary"]
shape = SubResource("SegmentShape2D_2l01y")

[node name="Left" type="CollisionShape2D" parent="WorldBoundary"]
shape = SubResource("SegmentShape2D_n4s1y")

[node name="Down" type="CollisionShape2D" parent="WorldBoundary"]
shape = SubResource("SegmentShape2D_6b3ub")

[node name="Right" type="CollisionShape2D" parent="WorldBoundary"]
shape = SubResource("SegmentShape2D_mxyi1")

[node name="LabelSpell" parent="." instance=ExtResource("3_yop4o")]
offset_right = 1280.0
offset_bottom = 720.0
text = "WARNING: ENTERING DANGER ZONE




PLEASE REMAIN CAREFUL




END OF COMMUNICATION"
horizontal_alignment = 1
vertical_alignment = 1
lifetime = 11.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="ParallaxBackground"]
position = Vector2(640, -16)
process_material = SubResource("ParticleProcessMaterial_4e25h")
texture = ExtResource("3_3rh33")
lifetime = 5.0

[node name="AsteroidSpawnTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1376, 396.5)
shape = SubResource("RectangleShape2D_ir78t")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-95.9375, 388.5)
shape = SubResource("RectangleShape2D_ir78t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(627, 764.5)
shape = SubResource("RectangleShape2D_tv1yd")

[connection signal="timeout" from="AsteroidSpawnTimer" to="." method="_on_asteroid_spawn_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
